fixed the menu bar and text alignment

--- a/dashboard.css
+++ b/dashboard.css
@@ -34,19 +34,34 @@ display: flex;
 
 .logo-menu-container{
     display: flex;
-    justify-content: space-around;
     background-color: coral;
     width: 20rem;
 }
 
-.menu-text, .fa-bars, .logo {
+.logo{
     margin: 1rem;
+    margin-right: 4rem;
+}
+
+.menu-text{
+    padding-top: 1rem;
+    margin-left: 1rem;
 }
 
 .menu-text{
     font-size: 1.5rem;
     font-family: 'Montserrat';
     font-weight: 900;
+}
+
+.fa-bars{
+    font-size: 1.5rem;
+    background: white;
+    border-radius: 50%;
+    max-height: 3.9rem;
+    padding-top: 1.2rem;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
 }
 
 .logo{
